force-app/main/default/objects/EMPLOYEE__c/EMPLOYEE__c.object-meta.xml
<CustomObject>
    <description>This Object is for Employee of the Company</description>
    <label>Employee</label>
    <nameField>
        <label>EMPLOYEE  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>