force-app/main/default/objects/EMPLOYEE__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>This field having Address of the employee</description>
    <inlineHelpText>Address Field</inlineHelpText>
    <label>Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>