force-app/main/default/objects/EMPLOYEE__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>The  field contains the age which get calculated from date of birth of the employee</description>
    <formula>(TODAY() - Date_of_Birth__c)/ 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Age of the employee</inlineHelpText>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>