force-app/main/default/objects/EMPLOYEE__c/fields/Annual_CTC__c.field-meta.xml
<CustomField>
    <fullName>Annual_CTC__c</fullName>
    <description>This field having annual ctc of the employee</description>
    <inlineHelpText>ctc of the employee</inlineHelpText>
    <label>Annual CTC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>