force-app/main/default/objects/EMPLOYEE__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The Field Contains the city names</description>
    <inlineHelpText>city of the employee</inlineHelpText>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>State__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bhopal</fullName>
            </value>
            <value>
                <fullName>Gandhi Nagar</fullName>
            </value>
            <value>
                <fullName>Guntur</fullName>
            </value>
            <value>
                <fullName>Hyderabad</fullName>
            </value>
            <value>
                <fullName>Mumbai</fullName>
            </value>
            <value>
                <fullName>Pune</fullName>
            </value>
            <value>
                <fullName>Surat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>