force-app/main/default/objects/EMPLOYEE__c/fields/Current_Employee__c.field-meta.xml
<CustomField>
    <fullName>Current_Employee__c</fullName>
    <defaultValue>true</defaultValue>
    <description>The field having the information about employee is current or ex employee</description>
    <inlineHelpText>Current Employee status</inlineHelpText>
    <label>Current Employee</label>
    <type>Checkbox</type>
</CustomField>