force-app/main/default/objects/EMPLOYEE__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>This Field Contains the Date Of Birth of The Employee</description>
    <inlineHelpText>Date Of Birth Of The Employee</inlineHelpText>
    <label>Date of Birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>