force-app/main/default/objects/EMPLOYEE__c/fields/Date_of_Joining__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Joining__c</fullName>
    <description>This filed having the  Joining date of the employee</description>
    <inlineHelpText>Joining date of the employee</inlineHelpText>
    <label>Date of Joining</label>
    <required>true</required>
    <type>Date</type>
</CustomField>