force-app/main/default/objects/EMPLOYEE__c/fields/DEPARTMENT__c.field-meta.xml
<CustomField>
    <fullName>DEPARTMENT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Field having relation with department</description>
    <inlineHelpText>joins field</inlineHelpText>
    <label>DEPARTMENT</label>
    <referenceTo>DEPARTMENT__c</referenceTo>
    <relationshipName>EMPLOYEES</relationshipName>
    <type>Lookup</type>
</CustomField>