force-app/main/default/objects/EMPLOYEE__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BCA</fullName>
            </value>
            <value>
                <fullName>BE</fullName>
            </value>
            <value>
                <fullName>B Sc.</fullName>
            </value>
            <value>
                <fullName>B Tech.</fullName>
            </value>
            <value>
                <fullName>MCA</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>