force-app/main/default/objects/EMPLOYEE__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <description>This Field Contain the id for particular employee which is auto populated</description>
    <displayFormat>EMP-{000000}</displayFormat>
    <inlineHelpText>The Id of the Employee</inlineHelpText>
    <label>Employee ID</label>
    <type>AutoNumber</type>
</CustomField>