force-app/main/default/objects/EMPLOYEE__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>This Field Contains the first name of employee</description>
    <inlineHelpText>First name of the employee</inlineHelpText>
    <label>First Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>