force-app/main/default/objects/EMPLOYEE__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>The field having the Full name of employee</description>
    <formula>First_Name__c &amp; &quot; &quot; &amp; Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Full name of employee</inlineHelpText>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>