force-app/main/default/objects/EMPLOYEE__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field contains the employee is active or not</description>
    <inlineHelpText>check box for employee activeness</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>