force-app/main/default/objects/EMPLOYEE__c/fields/Is_on_Notice_Period_c__c.field-meta.xml
<CustomField>
    <fullName>Is_on_Notice_Period_c__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field contains the employee is on notice period  or not</description>
    <inlineHelpText>The status of notice period of employee</inlineHelpText>
    <label>Is on Notice Period</label>
    <type>Checkbox</type>
</CustomField>