force-app/main/default/objects/EMPLOYEE__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>This Field Contains the Last name of the Employee</description>
    <inlineHelpText>Last Name of the employee</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>