force-app/main/default/objects/EMPLOYEE__c/fields/Last_Working_Day__c.field-meta.xml
<CustomField>
    <fullName>Last_Working_Day__c</fullName>
    <description>This Field contain a date of last working day</description>
    <formula>Resignation_Date__c  + 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last Workig Day</inlineHelpText>
    <label>Last Working Day</label>
    <type>Date</type>
</CustomField>