force-app/main/default/objects/EMPLOYEE__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field having Lookup relation with employee object</description>
    <inlineHelpText>the lookup relationship with employee</inlineHelpText>
    <label>Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>EMPLOYEE__c.Employee_ID__c</field>
            <operation>equals</operation>
            <value>EMP-000014</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EMPLOYEE__c</referenceTo>
    <relationshipName>EMPLOYEES</relationshipName>
    <type>Lookup</type>
</CustomField>