force-app/main/default/objects/EMPLOYEE__c/fields/Resignation_Date__c.field-meta.xml
<CustomField>
    <fullName>Resignation_Date__c</fullName>
    <description>This field having the date of resignation of the employee</description>
    <inlineHelpText>Resignation date of the employee</inlineHelpText>
    <label>Resignation Date</label>
    <type>Date</type>
</CustomField>