force-app/main/default/objects/EMPLOYEE__c/fields/Salary_Credited_Till_Date__c.field-meta.xml
<CustomField>
    <fullName>Salary_Credited_Till_Date__c</fullName>
    <description>This field contain the salary credited till today</description>
    <inlineHelpText>Salary Credited Till tto day</inlineHelpText>
    <label>Salary Credited Till Date</label>
    <summarizedField>SALARY_DETAILS__c.Gross_Salary__c</summarizedField>
    <summaryForeignKey>SALARY_DETAILS__c.Credited_To__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>