force-app/main/default/objects/EMPLOYEE__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>The field contain SSN number</description>
    <inlineHelpText>ssn no</inlineHelpText>
    <label>SSN</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>