force-app/main/default/objects/EMPLOYEE__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>This Field having the state from which employee Belongs</description>
    <inlineHelpText>state of the employee</inlineHelpText>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AP</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Maharashtra</fullName>
            </value>
            <value>
                <fullName>MP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>