force-app/main/default/objects/EMPLOYEE__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This filed contain status of the employe in colour format</description>
    <formula>IF(
    Is_Active__c, 
    IF (
        
         Is_on_Notice_Period_c__c , 
        IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;Notice Period&quot;, 20, 20),
        IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Active&quot;, 20, 20)
        
    ),
    IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;Inactive&quot;, 20, 20)
    
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status in colour format</inlineHelpText>
    <label>Status</label>
    <type>Text</type>
</CustomField>