force-app/main/default/objects/EMPLOYEE__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>This Field having street which is a part of address</description>
    <inlineHelpText>Street</inlineHelpText>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>