force-app/main/default/objects/EMPLOYEE__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <description>This field having zip code which is a part of the address</description>
    <inlineHelpText>Zip code of the employee address</inlineHelpText>
    <label>Zip</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>