force-app/main/default/objects/EMPLOYEE__c/recordTypes/Non_Technical.recordType-meta.xml
<RecordType>
    <fullName>Non_Technical</fullName>
    <active>true</active>
    <description>This filed contains the  Non-Technical Record</description>
    <label>Non-Technical</label>
</RecordType>