force-app/main/default/objects/EMPLOYEE__c/recordTypes/Technical.recordType-meta.xml
<RecordType>
    <fullName>Technical</fullName>
    <active>true</active>
    <description>The field contain Technical record</description>
    <label>Technical</label>
</RecordType>