force-app/main/default/objects/EMPLOYEE__c/validationRules/CheckNotice.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckNotice</fullName>
    <active>true</active>
    <description>To check the notice period is true then resignation date can not be null</description>
    <errorConditionFormula>AND(
     Is_on_Notice_Period_c__c ,
    ISBLANK(Resignation_Date__c)
)</errorConditionFormula>
    <errorMessage>Resignation date is required when the notice period is checked</errorMessage>
</ValidationRule>