force-app/main/default/objects/EMPLOYEE__c/validationRules/EmpAge.validationRule-meta.xml
<ValidationRule>
    <fullName>EmpAge</fullName>
    <active>false</active>
    <description>To Validate the employee age</description>
    <errorConditionFormula>OR(
    Age__c &lt; 21,
    Age__c &gt; 31
)</errorConditionFormula>
    <errorMessage>age is out of range</errorMessage>
</ValidationRule>