force-app/main/default/objects/EMPLOYEE__c/validationRules/Restrict_Age.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Age</fullName>
    <active>true</active>
    <description>This Restrict the creation of an employee where the DOB is 18 years older</description>
    <errorConditionFormula>(today() -  Date_of_Birth__c )&lt;18</errorConditionFormula>
    <errorMessage>Please provide a valid Date of birth</errorMessage>
</ValidationRule>