force-app/main/default/objects/EMPLOYEE__c/validationRules/SSNValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>SSNValidation</fullName>
    <active>true</active>
    <description>Validation of SSN field limit size is 10 and duplicate values not allowed</description>
    <errorConditionFormula>IF(
  NOT(ISNULL(SSN__c)),
  OR(
    LEN(TEXT(SSN__c)) &gt; 10,
    NOT(REGEX(TEXT(SSN__c), &quot;^[0-9]{1,10}$&quot;))
  ),
  false
)</errorConditionFormula>
    <errorMessage>SSN cannot be longer than 10 characters.</errorMessage>
</ValidationRule>