force-app/main/default/objects/EMPLOYEE__c/validationRules/WorkingDayValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>WorkingDayValidation</fullName>
    <active>true</active>
    <description>This validation validate Last working date cannot be greater than the joining date.</description>
    <errorConditionFormula>Last_Working_Day__c &lt; Date_of_Joining__c</errorConditionFormula>
    <errorMessage>Last working date cannot be greater than the joining date.</errorMessage>
</ValidationRule>