force-app/main/default/objects/EMPLOYEE__c/listViews/All_Employee_On_Notice_Period.listView-meta.xml
<ListView>
    <fullName>All_Employee_On_Notice_Period</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_on_Notice_Period_c__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Employee On Notice Period</label>
    <sharedTo>
        <role>HR_Manager</role>
    </sharedTo>
</ListView>