force-app/main/default/objects/EMPLOYEE__c/listViews/LIstView.listView-meta.xml
<ListView>
    <fullName>LIstView</fullName>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Date_of_Joining__c</columns>
    <columns>Last_Working_Day__c</columns>
    <columns>DEPARTMENT__c</columns>
    <filterScope>Mine</filterScope>
    <label>LIstView</label>
</ListView>